--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -7,8 +7,8 @@
         <ion-card class="card-perfil">
             <div class="photo-menu">
                 <div class="ft-perfil">
-                    <img class="avatar" style="position:relative;  z-index: 1;" src="../../assets/imgs/perfil.jpg">
-                    <img class="avatar-grupo" style="position:absolute; z-index: 2;" src="../../assets/imgs/perfil_grupo.jpg">
+                    <img class="avatar" style="position:relative;  z-index: 1;" src="{{fotoPerfil}}">
+                    <img class="avatar-grupo" style="position:absolute; z-index: 2;" src="{{fotoGrupo}}">
                 </div>
             </div>
             <div class="card-title">Igão</div>
