--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -1,6 +1,16 @@
 <ion-content no-bounce class="bgView2  ">
+        <ion-header class="card-background-page ">
+                <ion-navbar color="prime">
+                  <button ion-button icon-only menuToggle>
+                        <ion-icon name="menu"></ion-icon>
+                  </button>
+                  <ion-title class="menu_header">Eventos</ion-title>
+                </ion-navbar>
+            </ion-header>
+              
 
 
+<!--
     <ion-header>
         <ion-navbar color="prime">
             <button ion-button icon-only menuToggle>
@@ -72,7 +82,7 @@
                 </ion-title>
             </ion-toolbar>
         </ion-footer>
-    </ion-menu>
+    </ion-menu>-->
     <ion-content>
         <ion-content class="bg no-scroll" style="overflow-y: hidden;">
             <ion-fab bottom right>
