--- a/src/pages/evento-descricao/evento-descricao.html
+++ b/src/pages/evento-descricao/evento-descricao.html
@@ -1,27 +1,88 @@
 <ion-header class="header_evento">
 
   <ion-navbar color="prime" class="nav_evento">
-    <ion-title  class="nav_evento">Evento</ion-title>  
-  </ion-navbar>  
-    <img src=" {{evento.banner}}" class="img-evento"> 
-    <ion-fab right top  class="data_evento" >
-        <ion-badge class="bd-data_evento" >
-          <h1 color="sub" class="boton_data" >16 
-          <p class="mes-evento">Jul/2018</p></h1>
-        </ion-badge>
-      </ion-fab>
-    <ion-card class="card_descricao_evento">
+    <ion-title class="nav_evento">Evento</ion-title>
+  </ion-navbar>
+  <img src=" {{evento.banner}}" class="img-evento">
+  <ion-fab right top class="data_evento">
+    <ion-badge class="bd-data_evento">
+      <h1 color="sub" class="boton_data">16
+        <p class="mes-evento">Jul/2018</p>
+      </h1>
+    </ion-badge>
+  </ion-fab>
+  <ion-card class="card_descricao_evento">
 
-      <p class="titulo_evento"> {{evento.nome}}</p>
-      <p class="endereco_evento"> {{evento.endereco}}</p>
-      
-    </ion-card>
+    <p class="titulo_evento"> {{evento.nome}}</p>
+    <p class="endereco_evento"> {{evento.endereco}}</p>
+
+  </ion-card>
 </ion-header>
 
 
-<ion-content padding>
-  <ion-card>
-    {{evento.nome}}<br>
-    {{evento.id}}<br>    
-  </ion-card>
+<ion-content  class="background-page " scroll="true" >    
+  <ion-card class="card-informaçoes-conteudo">
+      <ion-grid nowrap>
+        <ion-row >
+          <ion-col col-3>
+            <p class="titulo-header">Atrações
+              <p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">Forro da Gota e Carua(SP)</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Produção
+              <p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">Forró da Gota</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Valores<p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">20R$(Sympla)/30R$(Até as 23hrs)/40R$(Após 23hrs)</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Venda<p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor"><a href="https://www.sympla.com.br/forro-da-gota__300222" style="color: #CF8E2C">Sympla</a>/Local
+              do evento</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Contatos<p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">forrodagota@gmail.com/(71)3333-3333</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Info. Extra<p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">Open Bar de Catuaba pra quem estiver com a camisa do f4a</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <p class="titulo-header">Descrição<p>
+          </ion-col>
+          <ion-col col-9>
+            <p class="texto-infor">Peeense num salão chameguento! Se achegue sexta, às 23h, lá no @mirantedosaflitos #forródagota
+              #meunorte #mirantedosaflitos #pensenumralabuchobom #forró #forróemsalvador #forróbaiano #forródabahia @hedernovaes</p>
+          </ion-col>
+        </ion-row>
+     </ion-grid>
+    </ion-card>
 </ion-content>
