--- a/src/pages/modal-map/modal-map.html
+++ b/src/pages/modal-map/modal-map.html
@@ -1,27 +1,28 @@
 
 <ion-content padding class="modalmapa">
-  <div class="overlay" (click)="fecharMapa()">
+  <div class="overlay" >
 <ion-card class="cardmodalmapa">
   <ion-card-header class="headermodalmapa">
-    Localização
+    <p class="titulomodal">
+    Localização</p>
   </ion-card-header>
-  <ion-card-content>
-    <img src="../../assets/imgs/local.png" >
- 
-   </ion-card-content>
-   <ion-row class="footermoodal">
-     <ion-col>
-      <button ion-button class="btn-modal " round (click)="fecharMapa()" >
-        <ion-icon name="md-close" color="terci" ></ion-icon>      
-      </button>
-     </ion-col>
-     <ion-col>
-      <button ion-button round class="btn-modal "  > 
-        <ion-icon name="md-pin" color="terci" ></ion-icon>      
-      </button>
-     </ion-col>
-   </ion-row>
+  <div>
+    <ion-row>
+      <ion-col col-6 class="colmap">
+      <button ion-button class="btn-modal " round (click)="fecharMapa2()" >
+          <ion-icon name="md-close" color="terci" ></ion-icon>      
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button round class="btn-modal "  > 
+            <ion-icon name="md-pin" color="terci" ></ion-icon>      
+        </button>
+      </ion-col>
+      </ion-row>
+    <img src="../../assets/imgs/local.png" class="im" >
 
+
+</div>
 </ion-card>
 </div>
 </ion-content>
