--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -48,7 +48,7 @@
             </ion-card>
             <ion-scroll scrollY="true" class="scroll" style="width: 100%; height: 60%;">
                 <ion-list>
-                    <ion-item *ngFor="let item of items" class="list-evetos">
+                    <ion-item *ngFor="let item of eventos" class="list-evetos">
                         <ion-fab top right class="fab-evento">
                             <button ion-fab class="btn-fab-evento" color="prime">
                                 <div class="div-check">
@@ -69,12 +69,12 @@
                                             <ion-badge class="data-evento" item-end>
                                                 <h1 color="sub">16</h1>
                                                 <br>
-                                                <p class="data-evento">Jul/2018</p>
-                                                <p class="hora-evento">23hrs</p>
+                                                <p class="data-evento">{{nomeMes}}/{{item.itemEvento.dia.getFullYear()}}</p>
+                                                <p class="hora-evento">{{item.itemEvento.dia.getHours().toString()}}:{{((item.itemEvento.dia.getMinutes()<10?"0":"") + item.itemEvento.dia.getMinutes())}}</p>
                                             </ion-badge>
                                         </ion-fab>
                                     </ion-thumbnail>
-                                    <img src="../../assets/imgs/frrgota.png" class="img-evento">
+                                    <img src="{{item.itemEvento.banner}}" class="img-evento">
                                 </button>
                                 <expandable [expanded]="item.expanded">
                                     <ion-card-content>
