--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -2,7 +2,7 @@
 
     <ion-header class="card-background-page">
         <ion-navbar color="prime" class="nav-titulo">
-            <ion-title class="menu_header"> RastaAppé</ion-title>
+            <ion-title class="menu_header"> RastAppé</ion-title>
         </ion-navbar>
         <ion-card class="card-perfil">
             <div class="photo-menu">
