--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -17,7 +17,7 @@
                 </button>
             </ion-fab>
             <ion-fab bottom left>
-                <button ion-fab clas="btn-fab-externo" color="prime">
+                <button ion-fab clas="btn-fab-externo" color="prime" (click)="createCalendar('MyCalendar')">
                     <ion-icon name="md-calendar"></ion-icon>
                 </button>
             </ion-fab>
@@ -35,11 +35,11 @@
             <ion-card class="card-itens">
                 <ion-grid no-padding>
                     <ion-row>
-                        <ion-col>
+                        <ion-col class="colseach">
                             <ion-searchbar placeholder="Procurar" class="searchbar-input"></ion-searchbar>
                         </ion-col>
                         <ion-col col-1>
-                            <button ion-button class="btn" clear>
+                            <button ion-button class="btn" clear (click)="abrirMapa()">
                                 <ion-icon name="ios-funnel-outline" color="#fff" class="icn"></ion-icon>
                             </button>
                         </ion-col>
