--- a/src/pages/calendario-modal/calendario-modal.html
+++ b/src/pages/calendario-modal/calendario-modal.html
@@ -1,19 +1,42 @@
-<!--
-  Generated template for the CalendarioModalPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>calendarioModal</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-  <calendar>teste</calendar>
-
+<ion-content padding class="modalcalendario">
+  <div class="overlay">
+    <ion-card class="cardmodalcalendario">
+      <ion-card-header class="headermodalcalendario">
+        <p class="titulomodal">
+          Calendario</p>
+      </ion-card-header>
+      <div class="calendar-header">
+        <ion-row class="calendar-month">
+          <ion-col col-2 (click)="goToLastMonth()">
+            <ion-icon name="arrow-back"></ion-icon>
+          </ion-col>
+          <ion-col col-8>{{currentMonth}} {{currentYear}}</ion-col>
+          <ion-col col-2 (click)="goToNextMonth()">
+            <ion-icon name="arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </div>
+      <div class="calendar-body">
+        <ion-grid>
+          <ion-row class="calendar-weekday">
+            <ion-col>Dom</ion-col>
+            <ion-col>Seg</ion-col>
+            <ion-col>Ter</ion-col>
+            <ion-col>Qua</ion-col>
+            <ion-col>Qui</ion-col>
+            <ion-col>Sex</ion-col>
+            <ion-col>Sab</ion-col>
+          </ion-row>
+          <ion-row class="calendar-date">
+            <ion-col col-1 *ngFor="let lastDay of daysInLastMonth" class="last-month">{{lastDay}}</ion-col>
+            <ion-col col-1 *ngFor="let day of daysInThisMonth">
+              <span class="currentDate" *ngIf="currentDate === day; else otherDate">{{day}}</span>
+              <ng-template #otherDate class="otherDate">{{day}}</ng-template>
+            </ion-col>
+            <ion-col col-1 *ngFor="let nextDay of daysInNextMonth" class="next-month">{{nextDay}}</ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
+    </ion-card>
+  </div>
 </ion-content>
