--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -17,7 +17,7 @@
                 </button>
             </ion-fab>
             <ion-fab bottom left>
-                <button ion-fab clas="btn-fab-externo" color="prime" >
+                <button ion-fab clas="btn-fab-externo" color="prime" (click)="abrirCalendario()">
                     <ion-icon name="md-calendar"></ion-icon>
                 </button>
             </ion-fab>
