--- a/src/pages/calendario-modal/calendario-modal.html
+++ b/src/pages/calendario-modal/calendario-modal.html
@@ -28,12 +28,12 @@
             <ion-col>Sab</ion-col>
           </ion-row>
           <ion-row class="calendar-date">
-            <ion-col col-1 *ngFor="let lastDay of daysInLastMonth" class="last-month">{{lastDay}}</ion-col>
+            <ion-col col-1 *ngFor="let lastDay of daysInLastMonth" class="last-month">{{lastDay.dia}}</ion-col>
             <ion-col col-1 *ngFor="let day of daysInThisMonth">
-              <span class="currentDate" *ngIf="currentDate === day; else otherDate">{{day}}</span>
+              <span class="currentDate" *ngIf="currentDate === day.dia; else otherDate">{{day.dia}}</span>
               <ng-template #otherDate class="otherDate">{{day}}</ng-template>
             </ion-col>
-            <ion-col col-1 *ngFor="let nextDay of daysInNextMonth" class="next-month">{{nextDay}}</ion-col>
+            <ion-col col-1 *ngFor="let nextDay of daysInNextMonth" class="next-month">{{nextDay.dia}}</ion-col>
           </ion-row>
         </ion-grid>
       </div>
