--- a/src/pages/calendario-modal/calendario-modal.html
+++ b/src/pages/calendario-modal/calendario-modal.html
@@ -29,9 +29,12 @@
           </ion-row>
           <ion-row class="calendar-date">
             <ion-col col-1 *ngFor="let lastDay of daysInLastMonth" class="last-month">{{lastDay.dia}}</ion-col>
-            <ion-col col-1 *ngFor="let day of daysInThisMonth">
-              <span class="currentDate" *ngIf="currentDate === day.dia; else otherDate">{{day.dia}}</span>
-              <ng-template #otherDate class="otherDate">{{day}}</ng-template>
+            <ion-col class="coldatas" col-1 *ngFor="let day of daysInThisMonth">
+              <button class="hojecomevento" *ngIf="currentDate === day.dia && day.evento==true; else hojesemevento" (click)="fecharMapa2()">{{day.dia}}</button>
+              <button #hojesemevento class="currentDate" *ngIf="currentDate === day.dia && day.evento==false; else diacomevento"(click)="fecharMapa2()">{{day.dia}}</button>
+              <button #diacomevento class="diacomevento" *ngIf="day.evento==true && currentDate !== day.dia; else otherDate"(click)="fecharMapa2()">{{day.dia}}</button>
+              <ion-badge #otherDate class="otherDate" *ngIf="day.evento==false && currentDate !== day.dia">{{day.dia}}</ion-badge>
+              
             </ion-col>
             <ion-col col-1 *ngFor="let nextDay of daysInNextMonth" class="next-month">{{nextDay.dia}}</ion-col>
           </ion-row>
