--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -5,7 +5,7 @@
                 <ion-icon name="menu"></ion-icon>
             </button>
         </ion-buttons>
-        <ion-title class="menu_header" > Eventos -{{testeData}} </ion-title>
+        <ion-title class="menu_header" > Eventos  </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content no-bounce class="bgView2 ">
