--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -48,7 +48,8 @@
             </ion-card>
             <ion-scroll scrollY="true" class="scroll" style="width: 100%; height: 60%;">
                 <ion-list>
-                    <ion-item *ngFor="let item of eventos" class="list-evetos">
+                    <ion-item *ngFor="let item of eventosFiltrados" class="list-evetos">
+                        <!--<span *ngIf="item.itemEvento.dia.getDate()!==0 && item.itemEvento.dia.getDate()=== dataFiltro.dia && item.itemEvento.dia.getMonth()">-->
                         <ion-fab top right class="fab-evento">
                             <button ion-fab class="btn-fab-evento" color="prime">
                                 <div class="div-check">
