--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -6,7 +6,7 @@
             </button>
         </ion-buttons>
 
-        <ion-title class="menu_header"> Eventos- {{dataFiltro.dia}} </ion-title>
+        <ion-title class="menu_header"> Eventos</ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content no-bounce class="bgView2 ">
@@ -37,7 +37,7 @@
                 <ion-grid no-padding>
                     <ion-row>
                         <ion-col class="colseach">
-                            <ion-searchbar placeholder="Procurar" class="searchbar-input"></ion-searchbar>
+                            <ion-searchbar (ionInput)="pegarEventos($event)" placeholder="Procurar" class="searchbar-input"></ion-searchbar>
                         </ion-col>
                         <ion-col col-1>
                             <button ion-button class="btn" clear (click)="abrirMapa()">
@@ -265,7 +265,7 @@
                                                     <expandable [expanded]="item.expanded">
                                                         <ion-card-content>
                                                             <ion-fab left midle>
-                                                                <button ion-fab mini class="btn-fab-conteudo" color="prime">
+                                                                <button ion-fab mini class="btn-fab-conteudo" color="prime" (click)="compartilhar()">
                                                                     <ion-icon name="md-share" class="rstp-icone-conteudo"> </ion-icon>
                                                                 </button>
                                                                 <button ion-fab mini class="btn-fab-conteudo" color="prime" (click)="abrirMapa()">
